--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,8 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
+
+  # This are all packages used in the project NIGAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
   cupertino_icons: ^1.0.2
   google_fonts: ^5.1.0
   dots_indicator: ^3.0.0
@@ -42,7 +44,7 @@ dependencies:
   carousel_slider: ^4.2.1
   cached_network_image: ^3.2.3
   share: ^2.0.4
-  speech_to_text: ^6.3.0
+  # speech_to_text: ^6.3.0
   table_calendar: ^3.0.9
   firebase_core: ^2.21.0
   firebase_database: ^10.3.3
